@@ -15,7 +15,7 @@ PKG_NAME="last-exit"
 }
 
 which gnome-autogen.sh || {
-    echo "You need to install gnome-common from the GNOME CVS"
+    echo "You need to install gnome-common from the GNOME SVN"
     exit 1
 }
 REQUIRED_AUTOMAKE_VERSION=1.9 . gnome-autogen.sh
