@@ -1,14 +1,15 @@
 DBUS_ASSEMBLY = NDesk.DBus.dll
 DBUS_GLIB_ASSEMBLY = NDesk.DBus.GLib.dll
 
+DBUS_SRC = $(srcdir)/dbus-sharp/*.cs
+DBUS_GLIB_SRC = $(srcdir)/dbus-sharp-glib/*.cs
+
+if !EXTERNAL_DBUS
 dbusdir = $(pkglibdir)
 dbus_SCRIPTS = \
 	$(DBUS_ASSEMBLY) \
 	$(DBUS_GLIB_ASSEMBLY) \
 	$(DBUS_GLIB_ASSEMBLY).config
-
-DBUS_SRC = $(srcdir)/dbus-sharp/*.cs
-DBUS_GLIB_SRC = $(srcdir)/dbus-sharp-glib/*.cs
 
 all: $(DBUS_ASSEMBLY) $(DBUS_GLIB_ASSEMBLY)
 
@@ -17,6 +18,8 @@ $(DBUS_ASSEMBLY): $(DBUS_SRC)
 
 $(DBUS_GLIB_ASSEMBLY): $(DBUS_ASSEMBLY) $(DBUS_GLIB_SRC)
 	$(MCS) -target:library -out:$@ -r:$(DBUS_ASSEMBLY) $(DBUS_GLIB_SRC)
+
+endif
 
 EXTRA_DIST = $(DBUS_SRC) $(DBUS_GLIB_SRC) $(DBUS_GLIB_ASSEMBLY).config.in
 DISTCLEANFILES = $(DBUS_ASSEMBLY) $(DBUS_ASSEMBLY).mdb $(DBUS_GLIB_ASSEMBLY) $(DBUS_GLIB_ASSEMBLY).mdb
